--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prisma-generator-nestjs-swagger",
-  "description": "Provide a description about your generator",
-  "version": "1.0.3",
+  "description": "generates base dto classes for use with @nestjs/swagger and class-validator",
+  "version": "1.0.0",
   "license": "MIT",
   "bin": "./dist/generator.js",
   "engines": {
@@ -15,7 +15,8 @@
     "build": "npx tsc && chmod +x ./dist/bin.js",
     "dev": "npx tsc -w",
     "format": "prisma format --schema=./public.prisma",
-    "gen": "prisma generate --schema=./public.prisma"
+    "gen": "prisma generate --schema=./public.prisma",
+    "prepack": "yarn build"
   },
   "dependencies": {
     "@prisma/generator-helper": "^4.10.1",
