--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prisma-generator-nestjs-swagger",
   "description": "generates base dto classes for use with @nestjs/swagger and class-validator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "bin": "./dist/generator.js",
   "engines": {
@@ -42,15 +42,11 @@
     "prisma": "^4.10.1",
     "typescript": "^4.9.5"
   },
-  "homepage": "Link to homepage or github readme here",
-  "repository": {
-    "type": "git",
-    "url": "Repo link here"
-  },
-  "author": "Your Name <Your Email>",
+  "author": "dayne.mentier@gmail.com",
   "keywords": [
+    "@nestjs/swagger",
+    "class-validator",
     "prisma",
-    "prisma2",
     "generator"
   ],
   "prettier": {
