--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "prisma-generator-nestjs-swagger",
   "description": "generates base dto classes for use with @nestjs/swagger and class-validator",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "license": "MIT",
-  "bin": "./dist/generator.js",
+  "bin": "./dist/bin.js",
   "engines": {
     "node": ">=14.0"
   },
