--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prisma-generator-nestjs-swagger",
   "description": "generates basic dto classes for use with @nestjs/swagger and class-validator",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "license": "MIT",
   "bin": "./dist/prisma-generator-nestjs-swagger.js",
   "engines": {
@@ -15,6 +15,7 @@
     "build": "npx spack && yarn build:shebang && yarn build:chmod",
     "build:chmod": "chmod +x ./dist/prisma-generator-nestjs-swagger.js",
     "build:shebang": "echo \"#!/usr/bin/env node\"|cat - ./dist/prisma-generator-nestjs-swagger.js > /tmp/out && mv /tmp/out ./dist/prisma-generator-nestjs-swagger.js",
+    "depcheck": "depcheck .",
     "dev": "npx tsc -w",
     "format": "prisma format --schema=./public.prisma",
     "gen": "prisma generate --schema=./public.prisma",
@@ -22,7 +23,6 @@
   },
   "dependencies": {
     "@prisma/generator-helper": "^4.10.1",
-    "@prisma/internals": "^4.10.1",
     "lodash": "^4.17.21",
     "prettier": "^2.8.4",
     "@swc/core": "^1.3.36",
@@ -39,6 +39,7 @@
     "@typescript-eslint/parser": "^5.49.0",
     "class-validator": "^0.14.0",
     "class-transformer": "^0.5.1",
+    "depcheck": "^1.4.3",
     "eslint": "^8.32.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
